--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,13 @@ set(SRC_DIR "src")
 file(GLOB SRCS ${SRC_DIR}/*.c)
 file(GLOB HDRS ${SRC_DIR}/*.h)
 
-option(NANOVG_GLES3 "GLES3" OFF)
+#option(NANOVG_GLES3 "GLES3" OFF)
 
-if(NANOVG_GLES3)
-  add_definitions(-DNANOVG_GLES3_IMPLEMENTATION=1 )
-else()
-  add_definitions(-DNANOVG_GL3_IMPLEMENATION=1 )
-endif()
+#if(NANOVG_GLES3)
+#  add_definitions(-DNANOVG_GLES3_IMPLEMENTATION=1 )
+#else()
+#  add_definitions(-DNANOVG_GL3_IMPLEMENATION=1 )
+#endif()
 
 add_library(${PROJECT_NAME} ${SRCS})
 target_link_libraries(${PROJECT_NAME} -lm)
